# ChangeLog for dev-libs/yajl
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/yajl/ChangeLog,v 1.4 2010/10/27 22:08:16 maekke Exp $

  27 Oct 2010; Markus Meier <maekke@gentoo.org> yajl-1.0.11.ebuild:
  add ~arm, bug #341149

  20 Oct 2010; Jeroen Roovers <jer@gentoo.org> yajl-1.0.11.ebuild:
  Marked ~hppa (bug #341149).

*yajl-1.0.11 (15 Oct 2010)

  15 Oct 2010; Samuli Suominen <ssuominen@gentoo.org> +yajl-1.0.11.ebuild:
  Version bump.

*yajl-1.0.9-r1 (23 May 2010)

  23 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +yajl-1.0.9-r1.ebuild, +files/yajl-fix_cmakelists.patch,
  +files/yajl-fix_tests.patch, +metadata.xml:
  Initial import in main tree of yajl, needed for yajl-ruby which is in turn
  optionally used by the new Rails. Assigned to ruby herd for now. Thanks to
  the Sunrise people for the ebuild.

  04 Apr 2010; Tomáš Chvátal <scarabeus@gentoo.org> yajl-1.0.9.ebuild,
  +files/yajl-fix_cmakelists.patch, +files/yajl-fix_tests.patch:
  Fixup yajl cmakelist files.

  26 Mar 2010; Ondrej Sukup (mimi_vx) <mimi.vx@gmail.com> +yajl-9999.ebuild:
  Add live ebuild. Thx chithead

*yajl-1.0.9 (18 Mar 2010)

  18 Mar 2010; Ondrej Sukup (mimi_vx) <mimi.vx@gmail.com>
  +yajl-1.0.9.ebuild, +metadata.xml:
  initial commit of yajl , thanks to scarabeus and Tommy[D]
