@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/yajl
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/yajl/ChangeLog,v 1.4 2010/10/27 22:08:16 maekke Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/yajl/ChangeLog,v 1.5 2011/01/22 18:25:45 hwoarang Exp $
+
+  22 Jan 2011; Markos Chandras <hwoarang@gentoo.org> yajl-1.0.11.ebuild:
+  Stable on amd64 wrt bug #352279
 
   27 Oct 2010; Markus Meier <maekke@gentoo.org> yajl-1.0.11.ebuild:
   add ~arm, bug #341149
